--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180104 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180104 Prototyping.ipynb
@@ -65,7 +65,8 @@
     "# from bokeh.plotting import figure\n",
     "import tqdm\n",
     "from tqdm import tnrange, tqdm, tqdm_notebook\n",
-    "from collections.abc import Sequence, Iterable"
+    "from collections.abc import Sequence, Iterable\n",
+    "from copy import copy, deepcopy"
    ]
   },
   {
@@ -127,6 +128,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "DEFAULT_FRAME_COMPRESSOR = Blosc(\n",
+    "    cname=\"zstd\", clevel=5, shuffle=Blosc.SHUFFLE, blocksize=0\n",
+    ")\n",
+    "DEFAULT_FRAME_CHUNKS = (1, 1, 512, 512)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
@@ -153,11 +168,144 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ingest/processing functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "def map_ndarray(func, ary, axis=0, out=None, progress_bar=tqdm_auto):\n",
+    "    if not isinstance(axis, Sequence):\n",
+    "        axis = [axis]\n",
+    "    iter_shape = [ary.shape[dim] for dim in axis]\n",
+    "    _iter = itertools.product(*[range(l) for l in iter_shape])\n",
+    "    if progress_bar is not None:\n",
+    "        _iter = progress_bar(_iter, total=reduce(operator.mul, iter_shape))\n",
+    "    for iter_idxs in _iter:\n",
+    "        idxs = [slice(None)] * len(ary.shape)\n",
+    "        for dim, iter_idx in zip(axis, iter_idxs):\n",
+    "            idxs[dim] = iter_idx\n",
+    "        idxs = tuple(rstrip(idxs, lambda x: x == slice(None)))\n",
+    "        if out is None:\n",
+    "            new_ary = func(ary[idxs])\n",
+    "            iter_shape = tuple(map(lambda dim: ary.shape[dim], axis))\n",
+    "            new_shape = iter_shape + new_ary.shape\n",
+    "            out = np.zeros(new_shape, dtype=new_ary.dtype)\n",
+    "            out[idxs] = new_ary\n",
+    "        else:\n",
+    "            out[idxs] = func(ary[idxs])\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_positions(func, in_group, out_group, axis=0, progress_bar=tqdm_auto):\n",
+    "    res = None\n",
+    "    shape = None\n",
+    "    dtype = None\n",
+    "    for pos_name, position in progress_bar(in_group.items()):\n",
+    "        if pos_name in out_group:\n",
+    "            ary = out_group[pos_name]\n",
+    "            shape = ary.shape\n",
+    "            dtype = ary.dtype\n",
+    "            if \"processed\" and ary.attrs and ary.attrs[\"processed\"]:\n",
+    "                continue\n",
+    "        else:\n",
+    "            if shape is None or dtype is None:\n",
+    "                res = map_ndarray(func, position, axis=axis, progress_bar=progress_bar)\n",
+    "                shape = res.shape\n",
+    "                dtype = res.dtype\n",
+    "            ary = out_group.zeros(pos_name, shape=shape, dtype=dtype)\n",
+    "            ary.attrs[\"processed\"] = False\n",
+    "        if res is None:\n",
+    "            map_ndarray(func, position, axis=axis, out=ary, progress_bar=progress_bar)\n",
+    "        else:\n",
+    "            ary[:] = res\n",
+    "            res = None\n",
+    "        ary.attrs[\"processed\"] = True\n",
+    "    return out_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "def ingest_nd2_file(nd2_file, zarr_file, **kwargs):\n",
+    "    nd2 = nd2reader.ND2Reader(nd2_file)\n",
+    "    store = zarr.DirectoryStore(zarr_file)\n",
+    "    root_group = zarr.open_group(store=store)\n",
+    "    raw_group = root_group.require_group(\"raw\")\n",
+    "    return ingest_nd2(nd2, raw_group, **kwargs)\n",
+    "\n",
+    "\n",
+    "def ingest_nd2(\n",
+    "    nd2,\n",
+    "    raw_group,\n",
+    "    progress_bar=tqdm_auto,\n",
+    "    compressor=DEFAULT_FRAME_COMPRESSOR,\n",
+    "    chunks=DEFAULT_FRAME_CHUNKS,\n",
+    "    **kwargs,\n",
+    "):\n",
+    "    meta = deepcopy(nd2.metadata)\n",
+    "    meta[\"date\"] = meta[\"date\"].isoformat()\n",
+    "    raw_group.attrs[\"metadata\"] = meta\n",
+    "    for v in tqdm_auto(range(nd2.sizes[\"v\"])):\n",
+    "        ary = raw_group.require_dataset(\n",
+    "            \"{:d}\".format(v),\n",
+    "            shape=[nd2.sizes[n] for n in \"ctyx\"],\n",
+    "            chunks=chunks,\n",
+    "            dtype=\"u2\",\n",
+    "            order=\"C\",\n",
+    "            compressor=compressor,\n",
+    "            **kwargs,\n",
+    "        )\n",
+    "        if \"ingested\" in ary.attrs and ary.attrs[\"ingested\"]:\n",
+    "            continue\n",
+    "        ary.attrs[\"ingested\"] = False\n",
+    "        ary.attrs[\"metadata\"] = meta\n",
+    "        for c in progress_bar(range(nd2.sizes[\"c\"]), leave=False):\n",
+    "            for t in progress_bar(range(nd2.sizes[\"t\"]), leave=False):\n",
+    "                ary[c, t, :, :] = nd2.get_frame_2D(c=c, t=t, v=v)\n",
+    "        ary.attrs[\"ingested\"] = True\n",
+    "    return raw_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ingest_nd2_file(\n",
+    "    \"/home/jqs1/scratch/fidelity/171018/20171018_TrxnError.nd2\",\n",
+    "    \"/home/jqs1/scratch/fidelity/171018/171018.zarr\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# Trench detection"
+    "# Trench detection functions"
    ]
   },
   {
@@ -536,7 +684,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Segmentation"
+    "# Segmentation functions"
    ]
   },
   {
@@ -686,90 +834,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_group[\"raw/0\"][0, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_ndarray(func, ary, axis=0, out=None, progress_bar=tqdm_auto):\n",
-    "    if not isinstance(axis, Sequence):\n",
-    "        axis = [axis]\n",
-    "    iter_shape = [ary.shape[dim] for dim in axis]\n",
-    "    _iter = itertools.product(*[range(l) for l in iter_shape])\n",
-    "    if progress_bar is not None:\n",
-    "        _iter = progress_bar(_iter, total=reduce(operator.mul, iter_shape))\n",
-    "    for iter_idxs in _iter:\n",
-    "        idxs = [slice(None)] * len(ary.shape)\n",
-    "        for dim, iter_idx in zip(axis, iter_idxs):\n",
-    "            idxs[dim] = iter_idx\n",
-    "        idxs = tuple(rstrip(idxs, lambda x: x == slice(None)))\n",
-    "        if out is None:\n",
-    "            new_ary = func(ary[idxs])\n",
-    "            iter_shape = tuple(map(lambda dim: ary.shape[dim], axis))\n",
-    "            new_shape = iter_shape + new_ary.shape\n",
-    "            out = np.zeros(new_shape, dtype=new_ary.dtype)\n",
-    "            out[idxs] = new_ary\n",
-    "        else:\n",
-    "            out[idxs] = func(ary[idxs])\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_positions(func, root_group, name, axis=0, progress_bar=tqdm_auto):\n",
-    "    raw_group = root_group[\"raw\"]\n",
-    "    processed_group = root_group.require_group(\"computed/{}\".format(name))\n",
-    "    res = None\n",
-    "    shape = None\n",
-    "    dtype = None\n",
-    "    for pos_name, position in progress_bar(raw_group.items()):\n",
-    "        if pos_name in processed_group:\n",
-    "            ary = processed_group[pos_name]\n",
-    "            shape = ary.shape\n",
-    "            dtype = ary.dtype\n",
-    "            if \"processed\" and ary.attrs and ary.attrs[\"processed\"]:\n",
-    "                continue\n",
-    "        else:\n",
-    "            if shape is None or dtype is None:\n",
-    "                res = map_ndarray(func, position, axis=axis)\n",
-    "                shape = res.shape\n",
-    "                dtype = res.dtype\n",
-    "            ary = processed_group.zeros(pos_name, shape=shape, dtype=dtype)\n",
-    "            ary.attrs[\"processed\"] = False\n",
-    "        if res is None:\n",
-    "            map_ndarray(func, position, axis=axis, out=ary)\n",
-    "        else:\n",
-    "            ary[:] = res\n",
-    "            res = None\n",
-    "        ary.attrs[\"processed\"] = True\n",
-    "    return processed_group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del computed_group[\"hessian_k1\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "k1 = process_positions(\n",
-    "    lambda f: hessian_eigenvalues(f)[0], root_group, \"hessian_k1\", axis=(0, 1)\n",
+    "    lambda f: hessian_eigenvalues(f)[0],\n",
+    "    raw_group,\n",
+    "    root_group.require_group(\"computed/hessian_k1\"),\n",
+    "    axis=(0, 1),\n",
     ")"
    ]
   },
