process_attrs, broken version of getting trench points.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180117 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180117 Prototyping.ipynb
@@ -243,34 +243,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_attrs(func, in_group, out_group, progress_bar=tqdm_auto):\n",
+    "    for pos_name, position in progress_bar(in_group.items()):\n",
+    "        pos_group = out_group.require_group(pos_name)\n",
+    "        if \"processed\" and pos_group.attrs and pos_group.attrs[\"processed\"]:\n",
+    "            continue\n",
+    "        else:\n",
+    "            pos_group.attrs[\"processed\"] = False\n",
+    "        res = func(position)\n",
+    "        pos_group[\"result\"] = res\n",
+    "        pos_group.attrs[\"processed\"] = True\n",
+    "    return out_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_attrs(func, in_group, out_group, axis=0, progress_bar=tqdm_auto):\n",
-    "    res = None\n",
-    "    shape = None\n",
-    "    dtype = None\n",
-    "    for pos_name, position in progress_bar(in_group.items()):\n",
-    "        if pos_name in out_group:\n",
-    "            ary = out_group[pos_name]\n",
-    "            shape = ary.shape\n",
-    "            dtype = ary.dtype\n",
-    "            if \"processed\" and ary.attrs and ary.attrs[\"processed\"]:\n",
-    "                continue\n",
-    "        else:\n",
-    "            if shape is None or dtype is None:\n",
-    "                res = map_ndarray(func, position, axis=axis, progress_bar=progress_bar)\n",
-    "                shape = res.shape\n",
-    "                dtype = res.dtype\n",
-    "            ary = out_group.zeros(pos_name, shape=shape, dtype=dtype)\n",
-    "            ary.attrs[\"processed\"] = False\n",
-    "        if res is None:\n",
-    "            map_ndarray(func, position, axis=axis, out=ary, progress_bar=progress_bar)\n",
-    "        else:\n",
-    "            ary[:] = res\n",
-    "            res = None\n",
-    "        ary.attrs[\"processed\"] = True\n",
-    "    return out_group"
+    "raw_group[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_points_group = computed_group.require_group(\"trench_points\")\n",
+    "process_attrs(\n",
+    "    lambda img_series: get_image_series_trenches(img_series[1], 0),\n",
+    "    raw_group,\n",
+    "    trench_points_group,\n",
+    ")"
    ]
   },
   {
@@ -323,9 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Trench detection functions"
    ]
@@ -334,7 +343,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -386,7 +394,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -470,7 +477,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -527,7 +533,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -552,7 +557,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -677,7 +681,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -900,7 +903,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Image viewers"
    ]
@@ -908,7 +913,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def select(xs, mask):\n",
@@ -1007,7 +1014,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "FrameStream = Stream.define(\"Frame\", t=0, v=0)\n",
@@ -1081,7 +1090,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def overlay_image_viewer(frames):\n",
@@ -1117,6 +1128,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "hideCode": true
    },
    "outputs": [],
@@ -1235,7 +1247,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def trench_peaks_callback(t, y):\n",
@@ -1256,7 +1270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1276,7 +1292,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for t in range(kymo.shape[1] // 5):\n",
@@ -1285,7 +1303,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Old"
    ]
@@ -1293,7 +1313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# %%opts Image (cmap='viridis')\n",
@@ -1316,7 +1338,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# handle out-of-bounds/negative t/x values\n",
@@ -1339,6 +1363,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
