WIP. quantize_frame does random rounding correctly.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180123 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180123 Prototyping.ipynb
@@ -371,7 +371,7 @@
    "source": [
     "%%time\n",
     "b = zarr.array(\n",
-    "    a[:, :3, :, :] // 2**5,\n",
+    "    (a[:, :3, :, :] // 2**7),\n",
     "    compressor=Blosc(cname=\"zstd\", clevel=2, shuffle=Blosc.SHUFFLE),\n",
     ")\n",
     "display(b.info)"
@@ -384,11 +384,44 @@
    "outputs": [],
    "source": [
     "frame = a[0, 0, 300:600, :800]\n",
-    "factor = 2**8\n",
+    "factor = 2**7\n",
     "# img = frame - (frame//factor)*factor\n",
-    "img = frame // factor\n",
+    "# img = frame//factor\n",
+    "# img = frame//factor & 1\n",
+    "# img = quantize_frame(frame, 12, random=False)\n",
+    "img = np.mean([quantize_frame(frame, 12, random=True) for i in range(300)], axis=0) - (\n",
+    "    frame / 2**12\n",
+    ")\n",
     "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(img)"
+    "plt.imshow(img)\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(-20.1 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.floor(-20.1 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-20.1 // 2"
    ]
   },
   {
@@ -399,12 +432,24 @@
    },
    "outputs": [],
    "source": [
-    "def quantize_frame(arr):\n",
-    "    pass\n",
+    "def quantize_frame(arr, bits, random=True):\n",
+    "    factor = 2**bits\n",
+    "    if random:\n",
+    "        return np.floor((arr / factor) + np.random.random(size=arr.shape)).astype(\n",
+    "            arr.dtype\n",
+    "        )\n",
+    "    else:\n",
+    "        return arr // factor\n",
     "\n",
     "\n",
     "def quantize_frames(in_group, out_group, bits, random=True, progress_bar=tqdm_auto):\n",
-    "    pass"
+    "    out_group.attrs[\"quantization\"] = {\"bits\": bits, \"random\": random}\n",
+    "    return process_positions(\n",
+    "        lambda frame: quantize_frame(frame, bits, random=random),\n",
+    "        in_group,\n",
+    "        out_group,\n",
+    "        axis=(0, 1),\n",
+    "    )"
    ]
   },
   {
