First cut of refactor into .py files, CLI. Seems to work. Hard-coded to use console tqdm, auto-switching didn't work.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180123 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180123 Prototyping.ipynb
@@ -253,7 +253,12 @@
     "                continue\n",
     "        else:\n",
     "            if shape is None or dtype is None:\n",
-    "                res = map_ndarray(func, position, axis=axis, progress_bar=progress_bar)\n",
+    "                res = map_ndarray(\n",
+    "                    func,\n",
+    "                    position,\n",
+    "                    axis=axis,\n",
+    "                    progress_bar=partial(progress_bar, leave=False),\n",
+    "                )\n",
     "                shape = res.shape\n",
     "                dtype = res.dtype\n",
     "                if chunks is None and len(shape) == len(position.shape):\n",
@@ -348,85 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = raw_group[\"10\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "b = zarr.array(\n",
-    "    (a[:, :3, :, :] // 2**7),\n",
-    "    compressor=Blosc(cname=\"zstd\", clevel=2, shuffle=Blosc.SHUFFLE),\n",
-    ")\n",
-    "display(b.info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame = a[0, 0, 300:600, :800]\n",
-    "factor = 2**7\n",
-    "# img = frame - (frame//factor)*factor\n",
-    "# img = frame//factor\n",
-    "# img = frame//factor & 1\n",
-    "# img = quantize_frame(frame, 12, random=False)\n",
-    "img = np.mean([quantize_frame(frame, 12, random=True) for i in range(300)], axis=0) - (\n",
-    "    frame / 2**12\n",
-    ")\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(img)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int(-20.1 / 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.floor(-20.1 / 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-20.1 // 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "init_cell": true
    },
@@ -454,7 +380,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Trench detection functions"
    ]
@@ -463,6 +391,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -514,6 +443,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -597,6 +527,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -653,6 +584,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -677,6 +609,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -803,6 +736,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -973,6 +907,33 @@
    "metadata": {},
    "source": [
     "# Compute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantize_frames(raw_group, root_group.require_group(\"quantized\"), 7, random=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantized_group = root_group.require_group(\"quantized\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantized_group[\"10\"].info"
    ]
   },
   {
