First cut of diagnostics plot browser.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180126 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180126 Prototyping.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Imports"
    ]
@@ -13,7 +11,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -39,16 +36,9 @@
     "from IPython.display import display, clear_output\n",
     "import skimage\n",
     "import skimage.morphology\n",
-    "import sklearn\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "\n",
-    "# from sklearn import metrics\n",
-    "# from sklearn.datasets.samples_generator import make_blobs\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "import peakutils\n",
     "import scipy.stats\n",
     "import scipy.interpolate\n",
-    "from holoborodko_diff import holo_diff\n",
     "import functools\n",
     "import operator\n",
     "from functools import partial, reduce\n",
@@ -56,6 +46,7 @@
     "from itertools import zip_longest\n",
     "from more_itertools import rstrip\n",
     "from collections import Counter, defaultdict\n",
+    "from collections.abc import Mapping, Sequence\n",
     "from bokeh.models import WheelZoomTool\n",
     "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
@@ -70,7 +61,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "from processing import *\n",
+    "from trench_detection import *\n",
+    "from trench_segmentation import *\n",
+    "from utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "init_cell": true
    },
    "outputs": [],
@@ -139,8 +155,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "root_group[\"quantized\"][\"0\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag = tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "trench_points = get_image_series_trenches(frame_series, 1)"
+    "trench_points = get_trenches(root_group[\"quantized\"][\"0\"], 0, diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeled_image\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_browser(plots, displays=None):\n",
+    "    if isinstance(plots, Mapping):\n",
+    "        accordion = widgets.Accordion(\n",
+    "            children=[plot_browser(v, displays=displays) for v in plots.values()]\n",
+    "        )\n",
+    "        for i, k in enumerate(plots.keys()):\n",
+    "            accordion.set_title(i, k)\n",
+    "        return accordion\n",
+    "    elif isinstance(plots, Sequence):\n",
+    "        raise NotImplementedError\n",
+    "    else:\n",
+    "        output = widgets.Output()\n",
+    "        displays[output] = plots\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disp = {}\n",
+    "display(plot_browser(diag, disp))\n",
+    "for k, v in disp.items():\n",
+    "    with k:\n",
+    "        display(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag"
    ]
   },
   {
