--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,14 +1,22 @@
 replace ingested/processed flag with finished flag
 
+dig into trench_detection internals in notebook
+minimum spacing from smallest consecutive peak spacing
+weight periodogram by peak height (?? this may be badv)
+
 hack trench_finder with fixed spacing, narrow angle, verify it works for ~20 frames
 
 look for brightest N pixels in trench cross-sections, show in table/next-prev browser so I can click and have viewer load/crop to trench
 non-binary hough transform (??)
+rotation-invariant detrending
 mother cell endpoint tracking
 mother cell segmentation mask
 2nd, 3rd cell endpoint tracking, masks
 UI
 tiff metadata/sketch of folder watcher (“stream”) command
+
+allow multiple accordion panes to be open simultaneously (see ipywidgets bug)
+revisit holoviews image axis inversion/overlay bug
 
 sublime remotesubl retry
 
@@ -20,12 +28,6 @@ get rid of ingest_nd2_file
 implement quantize_nd2 by allowing ingest_nd2 take a filter func
 profile quantize
 
-debug object to store hierarchy of debug plots
-
-store segmentation debugging plots in dicts in .attrs
-helper functions for displaying debugging plots (labeled by ordereddict key... optional description?) in tabs/accordions
-
-store trench points in computed/trench_finder group metadata
 allow image viewer to overlay trenches easily
 link image viewer to frame stepping widget
 improve rotation detection/trench finding
