Finished adding diagnostic plots. All work except for image with trench overlay.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180126 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180126 Prototyping.ipynb
@@ -173,25 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "trench_points = get_trenches(root_group[\"quantized\"][\"0\"], 0, diagnostics=diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"labeled_image\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_browser(plots, displays=None):\n",
     "    if isinstance(plots, Mapping):\n",
     "        accordion = widgets.Accordion(\n",
@@ -214,6 +195,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "trench_points = get_trenches(root_group[\"raw\"][\"0\"], 0, diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
     "disp = {}\n",
     "display(plot_browser(diag, disp))\n",
     "for k, v in disp.items():\n",
