--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
@@ -226,7 +226,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = diag[\"labeled_image\"]"
+    "label = \"label_1\"\n",
+    "signal = diag[label][\"peaks\"].data[(\"Curve\", \"I\")].data[:, 1]\n",
+    "xs = diag[label][\"peaks\"].data[(\"Scatter\", \"I\")].data[:, 0]"
    ]
   },
   {
@@ -235,7 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.info"
+    "plt.plot(range(len(signal)), signal)\n",
+    "plt.scatter(xs, signal[xs.astype(np.int_)], c=\"r\")"
    ]
   },
   {
@@ -244,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag"
+    "dxs = np.diff(xs)"
    ]
   },
   {
@@ -253,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_labeled"
+    "dxs.mean()"
    ]
   },
   {
@@ -262,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regrid?"
+    "dxs"
    ]
   },
   {
@@ -271,9 +274,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, img_labeled = _label_for_trenches(root_group[\"raw\"][\"0\"], 0)\n",
-    "# regrid(hv.Image(img_labeled, vdims='Intensity')).redim.range(Intensity=(0, 2))\n",
-    "regrid(RevImage(img_labeled)).redim.range(z=(0, 2))"
+    "period_min, period_max = 10, 50\n",
+    "bins = 1000\n",
+    "periods = np.linspace(period_min, period_max, bins)\n",
+    "std = scipy.stats.iqr(((xs) % periods[:, np.newaxis]), axis=1) / periods"
    ]
   },
   {
@@ -282,7 +286,165 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Counter(img_labeled.flat)"
+    "plt.hist(((xs[1:] - xs[:-1, np.newaxis]) % 23.56).flat, bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = np.sum(np.diff(((xs) % periods[:, np.newaxis]), axis=1) ** 2, axis=1) / periods\n",
+    "plt.plot(periods, q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = scipy.stats.iqr(((xs) % periods[:, np.newaxis]), axis=1) / periods\n",
+    "plt.plot(periods, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_signal = signal[500:]\n",
+    "plt.plot(range(len(cropped_signal)), cropped_signal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.interpolate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = scipy.interpolate.interp1d(range(len(signal)), signal, kind=\"cubic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signal2 = f(np.linspace(0, len(signal), 1000, endpoint=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = scipy.signal.welch(signal2, nperseg=1000, scaling=\"spectrum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = w[1].argmax()\n",
+    "f = w[0][idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 / w[0][idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 / f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(*w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i1, i2 = 170, 180\n",
+    "plt.plot(w[0][i1:i2], w[1][i1:i2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 / w[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(xs % 24.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(periods, std)"
    ]
   },
   {
