Trench overlay diagnostic plots work!

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
@@ -226,6 +226,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hv.Points?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Points(trench_points[1][0])  # * diag['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(diag[\"image\"].data)\n",
+    "# plt.scatter(*anchors.T, s=3, c='w')\n",
+    "plt.scatter(*trench_points[1][0].T, s=3, c=\"g\")\n",
+    "plt.scatter(*trench_points[1][1].T, s=3, c=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "label = \"label_1\"\n",
     "signal = diag[label][\"peaks\"].data[(\"Curve\", \"I\")].data[:, 1]\n",
     "xs = diag[label][\"peaks\"].data[(\"Scatter\", \"I\")].data[:, 0]"
